--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "dayjs": "^1.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.0.1"
+    "react-icons": "^5.0.1",
+    "react-router-dom": "^6.23.0"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.4.1",
